--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,10 @@ click>=8.1.3
 colorama>=0.4.6
 cryptography>=40.0.2
 cssselect2>=0.7.0
+django-admin-honeypot-updated-2021>=1.2.0
 Django>=4.1.3
 django-decouple>=2.1
+django-ipware>=5.0.0
 html5lib>=1.1
 idna>=3.4
 lxml>=4.9.2
